tests/ui/borrowck/var-matching-lifetime-but-unused-not-mentioned.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/var-matching-lifetime-but-unused-not-mentioned.rs:14:5
   |
LL | fn foo<'a>(
   |        -- lifetime `'a` defined here
LL |     used_arg: &'a u8,
   |     -------- `used_arg` is a reference that is only valid in the function body
...
LL |     consume(c);
   |     ^^^^^^^^^^
   |     |
   |     `used_arg` escapes the function body here
   |     argument requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0521`.
